--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@ attachPopupHandlers(p.marker, p);
         <a href="https://maps.google.com/?q=${latlng.lat},${latlng.lng}" target="_blank">📍 Google Maps</a></div><br>
         <input id="nazwaNew" placeholder="Nazwa" style="width: 100%"><br>
         <textarea id="opisNew" placeholder="Opis" style="width: 100%"></textarea><br>
-        <input id="warstwaNew" list="warstwaNewList" style="width: 100%">
+        <input id="warstwaNew" list="warstwaNewList" placeholder="Warstwa" style="width: 100%">
         <datalist id="warstwaNewList">${warstwaOptions}</datalist><br>
         <input id="kategoriaNew" list="kategoriaNewList" placeholder="Kategoria" style="width: 100%">
         <datalist id="kategoriaNewList">${kategoriaOptions}</datalist><br>
@@ -1241,6 +1241,10 @@ attachPopupHandlers(p.marker, p);
         <button id="saveNew">💾 Zapisz</button>
         <button id="cancelNew">Anuluj</button>`;
       setupEmojiInput(container.querySelector('#emojiNew'));
+
+      const layerInput = container.querySelector('#warstwaNew');
+      const categoryInput = container.querySelector('#kategoriaNew');
+
       const popup = marker.bindPopup(container).openPopup();
 
       let saved = false;
@@ -1255,14 +1259,25 @@ attachPopupHandlers(p.marker, p);
 
       container.querySelector("#saveNew").addEventListener("click", (e) => {
         e.stopPropagation();
-      const newId = crypto.randomUUID();
+        const layerVal = layerInput.value.trim();
+        const catVal = categoryInput.value.trim();
+
+        if (layerVal && !warstwy[layerVal]) {
+          addLayer(layerVal);
+        }
+        if (catVal && !categories.has(catVal)) {
+          categories.add(catVal);
+          updateCategoryFilter();
+        }
+
+        const newId = crypto.randomUUID();
 const data = {
   id: newId,
   IDpinezki: newId,
           nazwa: container.querySelector("#nazwaNew").value,
           opis: container.querySelector("#opisNew").value,
-          warstwa: container.querySelector("#warstwaNew").value,
-          kategoria: container.querySelector("#kategoriaNew").value,
+          warstwa: layerVal,
+          kategoria: catVal,
           emoji: container.querySelector("#emojiNew").value,
           lat: latlng.lat,
           lng: latlng.lng,
