--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ width: 15px;
       z-index: 1000;
     }
     #map.pin-cursor {
-      cursor: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png') 12 24, auto !important;
+      cursor: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSczMCcgaGVpZ2h0PSczMCc+Cjxwb2x5Z29uIHBvaW50cz0nMTUsMzAgMjUsNSA1LDUnIGZpbGw9J3JlZCcgc3Ryb2tlPSdibGFjaycvPgo8L3N2Zz4=') 15 30, auto !important;
     }
       .leaflet-grab {
     cursor: default !important;
